name:                 notifier-apns-io
version:              0.1.0
synopsis:             Apns stuff
license:              MIT
maintainer:           Tiago Loureiro <tiago.loureiro@gmail.com>
category:             Network
build-type:           Simple
cabal-version:        >= 1.14

description:
    Apns stuff

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Network.Apns.IO
      , Network.Apns.Notifications

    build-depends:
        aeson                >= 0.6 && < 0.8
      , base                 >= 4.5 && < 5
      , base16-bytestring    >= 0.1.1.6
      , bytestring           >= 0.10
      , convertible          >= 1.0
      , ex-pool              >= 0.1.0.1
      , HsOpenSSL            >= 0.10
      , lrucache             >= 1.1
      , mwc-random           >= 0.13
      , network              >= 2.5
      , notifier-apns        >= 0.1
      , primitive            >= 0.5
      , text                 >= 1.1
      , transformers         >= 0.3
      , time                 >= 1.4
      , unordered-containers >= 0.2.4
