name:                 notifier-apns
version:              0.1.0
synopsis:             Apns stuff
license:              MIT
maintainer:           Tiago Loureiro <tiago.loureiro@gmail.com>
category:             Network
build-type:           Simple
cabal-version:        >= 1.14

description:
    Apns stuff

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Network.Apns.Protocol
      , Network.Apns.Types

    build-depends:
        aeson                >= 0.6
      , base                 >= 4.5 && < 5
      , base16-bytestring    >= 0.1
      , binary               >= 0.5
      , bytestring           >= 0.10
      , convertible          >= 1.0
      , text                 >= 1.1
      , unordered-containers >= 0.2.4
