name:                 notifier-server
version:              0.1.0
synopsis:             Generic notifications server
license:              MIT
maintainer:           Tiago Loureiro <tiago.loureiro@gmail.com>
category:             Network
build-type:           Simple
cabal-version:        >= 1.14

description:
    Notifications

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
      Notifier.Server

    build-depends:
        base                 >= 4.5 && < 5
      , bytestring           >= 0.10
      , exceptions           >= 0.5
      , notifier-apns-io     >= 0.1
      , transformers         >= 0.3

executable notifier-server
    default-language:   Haskell2010
    main-is:            src/Main.hs

    ghc-options:
        -threaded
        -Wall
        -O2
        -fwarn-tabs
        -with-rtsopts=-N
        -with-rtsopts=-T

    build-depends:
        base                 >= 4.5 && < 5
      , notifier-apns-io     >= 0.1.0
      , notifier-server      >= 0.1.0
